--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 html {
   scroll-behavior: smooth;
+  margin: 0px;
+  padding: 0px;
 }
 
 
@@ -9,8 +11,8 @@ html {
 
 
 body {
-  margin: 0 auto;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   /* display: flex; */
   align-items: center;
   min-height: 100vh;
