--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ body {
   /* position:sticky; */
   width: 100%;
   height: 100%;
-  min-width: 500px;
+
   /* display: flex; */
   flex-direction: column;
 }
@@ -79,15 +79,16 @@ a:hover {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  /* margin-left:-5%; */
 }
 .wrapper_header_abbreviation{
   color:white;
   font-size: 5em;
   font-weight:700;
-  display: flex;
-  justify-content: center;
   text-shadow: 0px 0px 15px white;
-  
+  text-align: center !important;
+  display: flex !important;
+  justify-content: center !important;
 }
 .wrapper_header_up {
   /* color: aqua; */
@@ -679,9 +680,16 @@ z-index: 1;
 
 @media screen and (max-width: 460px) {
   #home {
-    width: 100%;
+    /* width: 100%; */
     font-size: 0.6em;
-    /* padding-bottom: 50%; */
+    margin: auto;
+    min-height: 100vh;
+  
+    display: flex;
+    text-align: center;
+    align-items: center;
+    border: 3px solid red;
+    /* margin:0 auto; */
   } 
 
   .wrapper_header_abbreviation {
