--- a/src/style.css
+++ b/src/style.css
@@ -127,6 +127,7 @@ margin-left: -20px;
   justify-content: center;
 /* border: 1px solid red; */
   width: 100%;
+  margin-top: -14%;
   min-width: 120px;
   /* margin-top:-13%; */
   text-align: center;
