--- a/src/style.css
+++ b/src/style.css
@@ -136,7 +136,7 @@ margin-left: -20px;
 
 .about {
   background: linear-gradient(to bottom right,black, lightblue);
-  padding-top: 17%;
+  padding-top: 13%;
   display: flex;
   border-bottom: 3px solid lightgray;
   width: 100%;
@@ -148,39 +148,23 @@ margin-left: -20px;
   font-size: 2.5em;
   /* margin: -10px 50px; */
 }
-.about_left {
+.about_left, .about_right {
   display: flex;
   flex-direction: column;
   color: white;
-  /* padding-left: 8%; */
   font-size: 1.3em;
   line-height: 1.5em;
   text-indent:1.2em;
   flex: 2;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   height: 100%;
+  margin: 20px;
+  gap: 25px;
 }
-.sdf {
-  
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-}
-
-.about_right {
-  /* border:  1px solid red; */
-  color: white;
-  /* padding-left: 8%; */
-  font-size: 1.2em;
-  line-height: 1.5em;
-  text-indent:1.2em;
-  flex-direction: column;
-  flex: 2;
-  height: 100vh;
-}
-
+ 
+ 
 .about_right >div {
-  padding: 5px 20px;
+  /* padding: 5px 20px; */
   font-size: 1.2em;
 }
 
@@ -706,14 +690,12 @@ z-index: 1;
   .about {
     display: flex;
     flex-direction: column;
-    /* padding-bottom: 105%; */
   }
-  .about_left>h2 {
-    /* text-align: center; */
-    /* padding-left: 30%; */
+   .about_left {
+    /* color: aqua !important; */
   }
   .about_right {
-    /* padding-left: 0%; */
+    /* padding-left: 10%; */
   }
   
   .skills {
