--- a/src/style.css
+++ b/src/style.css
@@ -645,13 +645,20 @@ z-index: 1;
   .wrapper_header_abbreviation {
   }
   .myPhoto {
-    width: 50%;
+    width: 40%;
     border: 8px solid aliceblue;
     margin-top:-12%;
 }
 .about {
-  /* padding-bottom: 85%; */
+  display: flex;
+  flex-direction: column;
+  font-size: 0.9em !important;
+  /* margin-top: 3%; */
 }
+
+
+
+
 .skills {
  
 }
@@ -689,7 +696,7 @@ z-index: 1;
   }
   .about {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
   }
    .about_left {
     /* color: aqua !important; */
