--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,7 @@ a:hover {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  min-height: 700px;
   /* margin-left:-5%; */
 }
 .wrapper_header_abbreviation{
@@ -685,7 +686,6 @@ z-index: 1;
     display: flex;
     text-align: center;
     align-items: center;
-    border: 3px solid red;
     /* margin:0 auto; */
   } 
 
