--- a/src/style.css
+++ b/src/style.css
@@ -464,6 +464,7 @@ z-index: 1;
   display: flex;
    margin-top: -50px;
   flex-direction: column;
+  padding-bottom: 12%;
 }
 .projects_content>div {
   display: flex;
@@ -480,14 +481,10 @@ z-index: 1;
   width: 100px;
   color: azure;
   font-size: 1.2em;
-  align-items: center
-    /* border: 2px solid red; */
-  
-}
-
-.projects_box {
-  /* justify-content: space-around; */
+  align-items: center;
   gap: 10px;
+  padding: 20px;
+  
 }
   
 .project_design {
@@ -621,7 +618,6 @@ z-index: 1;
 
 
  .projects_content>div {
-  border: 2px solid greenyellow;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -742,7 +738,7 @@ z-index: 1;
     /* border: 2px solid red; */
     margin-top: 50px;
     width: 300px;
-    gap: 100px;
+    gap: 0px;
   }
   
   
