--- a/src/style.css
+++ b/src/style.css
@@ -319,6 +319,7 @@ text-align: center;
   position: relative;
   background-color: aqua;
   text-shadow:  0px 0px 10px aqua;
+  border: 2px solid red;
 }
 
 
@@ -338,6 +339,7 @@ z-index: 1;
   z-index: 2;
   width: 80%;
 }
+
 
 .contacts_container>h5 {
   margin: 50px;
@@ -646,9 +648,44 @@ z-index: 1;
   }
 
   .navbar_buttons {
-    border: 2px solid red;
     display: none !important;
   }
+
+  .contacts {
+    margin-top: 0px
+  }
+  .contacts_content {
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column-reverse;
+  /* height: 100%; */
+}
+
+.contacts_container>h5 {
+  margin-top: 25px
+}
+.content_right {
+  margin-top: -45px
+  
+}
+.telephone {
+  margin-top: -25px
+  
+}
+
+.e-mail {
+  margin-top: -39px
+}
+.e-mail2 {
+  margin-top: -49px
+}
+
+.hide_info {
+  border: 2px solid red;
+  display: none;
+}
+
+
 }
 
 
