--- a/src/style.css
+++ b/src/style.css
@@ -308,7 +308,7 @@ text-align: center;
 
 
 .contacts {
-  height: 100%;
+  height: 110% !important;
   width:100%;
   overflow: hidden;
   display: flex;
@@ -324,7 +324,7 @@ text-align: center;
 
 
 .contacts video {
-height: 100vh;
+height: 100%;
 width: 100%;
 position: absolute;
 top: 0px;
