--- a/src/style.css
+++ b/src/style.css
@@ -319,7 +319,6 @@ text-align: center;
   position: relative;
   background-color: aqua;
   text-shadow:  0px 0px 10px aqua;
-  border: 2px solid red;
 }
 
 
@@ -487,6 +486,13 @@ z-index: 1;
   z-index: 2;
 }
 
+.navbar_small_button {
+  display: none;
+  width: 100px;
+  height: 38px;
+  background-color: red;
+  text-align: center;
+}
 
   
 @media screen and (max-width: 1300px) {
@@ -650,12 +656,13 @@ z-index: 1;
   .navbar_buttons {
     display: none !important;
   }
-
+  .navbar_small_button {
+    display: block;
+  }
   .contacts {
     margin-top: 0px
   }
   .contacts_content {
-  border: 2px solid red;
   display: flex;
   flex-direction: column-reverse;
   /* height: 100%; */
@@ -681,7 +688,6 @@ z-index: 1;
 }
 
 .hide_info {
-  border: 2px solid red;
   display: none;
 }
 
