--- a/src/style.css
+++ b/src/style.css
@@ -127,6 +127,7 @@ margin-left: -20px;
   display: flex;
   border-bottom: 3px solid lightgray;
   width: 100%;
+  height: 75vh;
 }
 
 .content_title {
@@ -170,7 +171,7 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   text-shadow: 0px 0px 15px white;
   background-size:cover;
   background-attachment: fixed;
-  height: 100%;
+  height: 100vh;
   filter: grayscale(50%);
   border-bottom: 3px solid white;
   display: flex;
@@ -200,6 +201,7 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   gap: 30px;
   position: relative;
   padding-top: 20px;
+  margin-top: 30px;
 }
 
 .battery_position img {
@@ -308,7 +310,8 @@ text-align: center;
 
 
 .contacts {
-  height: 110% !important;
+  /* height: 110% !important; */
+  height: 100vh;
   width:100%;
   overflow: hidden;
   display: flex;
@@ -347,7 +350,7 @@ z-index: 1;
 }
 .contacts_container>h6 {
   text-align: center;
-  margin-top: 90px;
+  margin-top: 20%;
   font-size: 0.6em;
   color: aliceblue;
 }
@@ -504,12 +507,24 @@ z-index: 1;
 
 
 @media screen and (max-width: 1200px) {
+  .skills {
+    height: 100%;
+  }
+  .contacts {
+    height: 110% !important;
+  }
+  .about {
+    height: 100%;
+  }
   .myPhoto {
     border: 8px solid aliceblue(0, 255, 51);
   }
  
   .content_skills {
     display: flex;
+  }
+  .battery_position {
+    margin-top: 0px;
   }
 }
   
