--- a/src/style.css
+++ b/src/style.css
@@ -496,6 +496,21 @@ z-index: 1;
   height: 38px;
   background-color: red;
   text-align: center;
+  margin: 0px;
+  padding: 0px;
+}
+li {
+  list-style: none;
+  border: 1px solid aliceblue;
+  border-top: none;
+  background-color: rgb(26, 19, 53, .5);
+  /* display: none; */
+  opacity: 0;
+}
+ul:hover li{
+  opacity: 1;
+  /* display: block; */
+  transition: 3s;
 }
 
   
