--- a/src/style.css
+++ b/src/style.css
@@ -506,6 +506,7 @@ li {
   background-color: rgb(26, 19, 53, .5);
   /* display: none; */
   opacity: 0;
+  transition: 3s;
 }
 ul:hover li{
   opacity: 1;
