--- a/src/style.css
+++ b/src/style.css
@@ -203,7 +203,7 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   gap: 30px;
   position: relative;
   padding-top: 20px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .battery_position img {
@@ -274,7 +274,7 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   margin: 0;
   text-align: center;
   font-size: 2em;
-  padding-top: 100px;
+  padding-top: 80px;
 }
 
 .content_skills {
@@ -288,7 +288,7 @@ text-align: center;
 }
 
 #planet {
-   box-shadow: 0px 0px 25px rgb(180, 245, 245);
+  box-shadow: 0px 0px 25px rgb(180, 245, 245);
   border-radius: 50%;
 }
 
@@ -458,7 +458,15 @@ z-index: 1;
   background-image:url(adaptiv.png);
   background-size: 142px 120px;
   background-repeat:no-repeat; 
+  
 }
+
+.project_design:hover {
+  filter: drop-shadow(5px 5px 3px black);
+  transition: .5s;
+
+}
+
 
 .projects_box:hover {
   color: aqua;
@@ -470,13 +478,18 @@ z-index: 1;
   border-radius: 50%;
   width: 120px;
 }
-.project_ball>img:active {
+.project_ball>img:active, .project_ball>img:hover {
   rotate: 360deg;
+  box-shadow: 0px 0px 10px aqua;
   transition: 3s;
 }
 
 .project_bootstrap>img {
   width: 120px;
+}
+.project_bootstrap>img:hover {
+  filter: drop-shadow(3px 3px 2px aqua);
+  transition: .5s;
 }
 
 .project_design>img {
