--- a/src/style.css
+++ b/src/style.css
@@ -287,6 +287,7 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
 text-align: center;
 }
 
+ 
 
 #car, #car2 {
   width: 90px !important;
@@ -296,6 +297,10 @@ text-align: center;
   /* left: 14.3%; */
   margin-top: -15.97%;
   display: none;
+}
+#car:hover, #car:active {
+  filter: drop-shadow(10px 10px 2px black);
+  transition: .5s;
 }
 
 #planet {
