--- a/src/style.css
+++ b/src/style.css
@@ -291,17 +291,23 @@ text-align: center;
 
 #car, #car2 {
   width: 90px !important;
-}
-#car2 {
   position: absolute;
-  /* left: 14.3%; */
+}
+#car {
+  
+  /* filter: drop-shadow(10px 10px 2px black) */
+  /* brightness(.5); */
+}
+/* #car2 {
+  position: absolute;
+  left: 14.3%;
   margin-top: -15.97%;
   display: none;
-}
-#car:hover, #car:active {
+} */
+/* #car:hover, #car:active, #car2:hover, #car2:active {
   filter: drop-shadow(10px 10px 2px black);
   transition: .5s;
-}
+} */
 
 #planet {
   box-shadow: 0px 0px 25px rgb(180, 245, 245);
