--- a/src/style.css
+++ b/src/style.css
@@ -478,7 +478,7 @@ z-index: 1;
 .project_design {
   height: 140px;
   width: 140px;
-  background-image:url(public/adaptiv.png);
+  background-image:url(adaptiv.png);
   background-size: 142px 120px;
   background-repeat:no-repeat; 
   
