--- a/src/style.css
+++ b/src/style.css
@@ -508,10 +508,13 @@ z-index: 1;
 .project_ball>img {
   border-radius: 50%;
   width: 120px;
+  rotate: 18000deg;
+  transition: 1500s;
 }
 .project_ball>img:active, .project_ball>img:hover {
   rotate: 360deg;
-  box-shadow: 0px 0px 10px aqua;
+  filter: drop-shadow(0px 0px 10px aqua);
+  /* box-shadow: ; */
   transition: 3s;
 }
 
