--- a/src/style.css
+++ b/src/style.css
@@ -64,15 +64,16 @@ a:hover {
 
 
 #home {
+  display: flex;
+  flex-direction: column;
   opacity: 0.6;
   background-color:black;
   height: 100vh;
   text-align: center;
   filter: grayscale(50%);
-  display: flex;
   justify-content: center;
-  flex-direction: column;
   min-height: 700px;
+  border-bottom: 3px solid white; 
 }
 .wrapper_header_abbreviation{
   color:white;
@@ -173,8 +174,9 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   text-shadow: 0px 0px 15px white;
   background-size:cover;
   background-attachment: fixed;
+  /* background; */
   height: 100vh;
-  filter: grayscale(50%);
+  filter: grayscale(30%);
   border-bottom: 3px solid white;
   display: flex;
   flex-direction: column;
@@ -681,9 +683,7 @@ ul:hover li{
   min-height: 100%;
   font-size: 1.1em;
 }
-.navbar_buttons {
-  /* gap: 25px; */
-}
+ 
 }
 
 
