--- a/src/style.css
+++ b/src/style.css
@@ -504,7 +504,7 @@ z-index: 1;
 .project_design {
   height: 140px;
   width: 140px;
-  background-image:url(public/top_logo.png);
+  background-image:url(top_logo.png);
   /* background-image:url(adaptiv.png); */
   background-size: 152px 80px;
   filter: drop-shadow(0px 0px 3px white);
