--- a/src/style.css
+++ b/src/style.css
@@ -377,12 +377,12 @@ text-align: center;
 
 
 .content_left img {
-  filter: grayscale(0) !important;
+  /* filter: grayscale(0) !important; */
 }
 
 
 .contacts video {
-filter: grayscale(0.6);
+filter: grayscale(0.8);
 height: 100%;
 width: 100%;
 position: absolute;
@@ -519,7 +519,7 @@ z-index: 1;
   height: 140px;
   width: 140px;
   background-image:url(top_logo.png);
-  /* background-image:url(adaptiv.png); */
+  background-image:url(adaptiv.png);
   background-size: 152px 80px;
   filter: drop-shadow(0px 0px 3px white);
   background-position: 0px 50px;
@@ -646,12 +646,12 @@ ul:hover li{
     margin-top: 0px;
   }
   
-
+  
 }
-  
-  
+
 
 @media screen and (max-width: 1000px) {
+
   #home {
     width: 100%;
     font-size: 0.77em;
@@ -727,7 +727,9 @@ ul:hover li{
   width: 100%;
   font-size: 0.6em;
 }
- 
+  .right {
+    margin-left: 45px;
+  } 
 .myPhoto {
     width: 40%;
     border: 8px solid aliceblue;
