--- a/src/style.css
+++ b/src/style.css
@@ -400,7 +400,7 @@ z-index: 1;
 }
 
 
-.contacts_container>h5 {
+.contacts_container>h2 {
   margin: 50px;
   text-align: center;
   font-size: 1.3em;
@@ -473,6 +473,7 @@ z-index: 1;
   color: rgb(150, 138, 197);
   text-shadow: 0px 0px 5px rgb(175, 219, 219);
   border-bottom: 3px solid lightgray;
+  
 }
 
 .projects>h1 {
@@ -488,9 +489,12 @@ z-index: 1;
    margin-top: -50px;
   flex-direction: column;
   padding-bottom: 12%;
+  /* justify-content: center; */
+  /* justify-content: space-around !important; */
 }
 .projects_content>div {
   display: flex;
+  align-items: center;
   justify-content: space-evenly;
   margin-top: 50px;
   
@@ -518,8 +522,8 @@ z-index: 1;
 .project_design {
   height: 140px;
   width: 140px;
-  background-image:url(top_logo.png);
-  background-image:url(adaptiv.png);
+  background-image:url(public/top_logo.png);
+  /* background-image:url(adaptiv.png); */
   background-size: 152px 80px;
   filter: drop-shadow(0px 0px 3px white);
   background-position: 0px 50px;
@@ -659,7 +663,6 @@ ul:hover li{
 
   .myPhoto {
     width: 36%;
-    border: 6px solid aliceblue(0, 255, 51);
     margin-top:-8%;
   }
   
@@ -732,7 +735,7 @@ ul:hover li{
   } 
 .myPhoto {
     width: 40%;
-    border: 8px solid aliceblue;
+    border: 3px solid aliceblue;
     margin-top:-12%;
 }
 .about {
@@ -793,6 +796,7 @@ ul:hover li{
   }
   .projects_content_right {
     margin-top: 10px !important;
+    border: 1px solid wheat !important;
   }
 
   .navbar_buttons {
